# pythonWeb8_2

./: consumer.py  models.py  producer.py  pyproject.toml
